# ModenFirstModules

./: .gitignore  pyproject.toml  upload.bat  version_bump.py
src/ModenFirstModules/: PrintConfig.py  README.md  __init__.py  math  print_config.py
src/ModenFirstModules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ModenFirstModules/Mmath/: FourCal.py  __init__.py
src/ModenFirstModules/output/: __init__.py
