[project]
name = "ModenFirstModules"
version = "1.0.0"
authors = [
  { name="program416", email="leogifted@naver.com" },
]
description = "A very small modules"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
