[project]
name = "ModenFirstModules"
version = "1.2.0.0.0.0"
authors = [
  { name="program416", email="leogifted@naver.com" },
]
dependencies = [
    "numpy>=2.4.4",
    "numba>=0.65.0"
]
description = "A very small modules"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
[project.urls]
Homepage = "https://github.com/program416/ModenFirstModules"
Issues = "https://github.com/program416/ModenFirstModules/issues"
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
